--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Using OpenLayers with Vite</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body>
-		<div id="map" class="map"></div>
-		<script type="module" src="./main.js"></script>
+	<body onload="GetMap()">
+		<div id="map"></div>
+		<script src="main.js"></script>
+		<script type="text/javascript" src="https://sdk.virtualearth.net/api/maps/mapcontrol" async defer></script>
 	</body>
 </html>
