modified:   index.html 	modified:   main.js 	modified:   style.css 	new file:   styles.json

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link rel="stylesheet" href="style.css" />
-	</head>
-	<body onload="GetMap()">
-		<div id="map"></div>
-		<script src="main.js"></script>
-		<script type="text/javascript" src="https://sdk.virtualearth.net/api/maps/mapcontrol" async defer></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <button id="add">Add</button>
+    <div id="map"></div>
+    <script src="main.js" type="module"></script>
+    <script
+      type="text/javascript"
+      src="https://sdk.virtualearth.net/api/maps/mapcontrol"
+      async
+      defer
+    ></script>
+  </body>
 </html>
