--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
-    <button id="add">Add</button>
+    <button id="add" class="btn btn-success bg-gradient">
+      <i class="bi-plus-lg"></i> Add
+    </button>
     <div id="map"></div>
     <script src="main.js" type="module"></script>
     <script
